# amhello

./: Makefile.am  README.md  configure.ac
src/: Makefile.am  hello.c
